--- a/queue.html
+++ b/queue.html
@@ -2,8 +2,10 @@
 <html lang="en">
     <head>
         <title>Queue</title>
+        <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:wght@300;400;800&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="queue.css"/>
 
+        
         <script src="lib/jquery-3.2.1.min.js"></script>
         <script src="lib/streamersonglist.js"></script>
     </head>
